first mintpy run complete

--- a/Haywrd_05502_01-S1.cfg
+++ b/Haywrd_05502_01-S1.cfg
@@ -27,7 +27,7 @@ mintpy.compute.config    = auto #[none / slurm / pbs / lsf ], auto for none (sam
 ## gzip - save ~62% disk usage, very slow [not recommend]
 mintpy.load.processor      = isce  #[isce, aria, hyp3, gmtsar, snap, gamma, roipac], auto for isce
 mintpy.load.autoPath       = auto  #[yes / no], auto for no, use pre-defined auto path
-mintpy.load.updateMode     = no  #[yes / no], auto for yes, skip re-loading if HDF5 files are complete
+mintpy.load.updateMode     = yes  #[yes / no], auto for yes, skip re-loading if HDF5 files are complete
 mintpy.load.compression    = auto  #[gzip / lzf / no], auto for no.
 ##---------for ISCE only:
 mintpy.load.metaFile       = ../Igrams/*/referenceShelve/data.dat  #[path of common metadata file for the stack], i.e.: ./reference/IW1.xml, ./referenceShelve/data.dat
@@ -50,7 +50,7 @@ mintpy.load.lookupXFile    = ../geom_reference/lon.rdr  #[path of longitude/colu
 mintpy.load.incAngleFile   = ../geom_reference/los.rdr  #[path of incidence angle file], optional but recommended
 mintpy.load.azAngleFile    = ../geom_reference/los.rdr  #[path of azimuth   angle file], optional
 mintpy.load.shadowMaskFile = ../geom_reference/shadowMask.rdr  #[path of shadow mask file], optional but recommended
-mintpy.load.waterMaskFile  = auto  #[path of water  mask file], optional but recommended
+mintpy.load.waterMaskFile  = ../geom_reference/waterMask.rdr  #[path of water  mask file], optional but recommended
 mintpy.load.bperpFile      = auto  #[path pattern of 2D perpendicular baseline file], optional
 ##---------multilook (optional):
 ## multilook while loading data with nearest interpolation, to reduce dataset size
@@ -70,7 +70,7 @@ mintpy.network.connNumMax      = auto  #[1-inf, no], auto for no, max number of 
 mintpy.network.startDate       = auto  #[20090101 / no], auto for no
 mintpy.network.endDate         = auto  #[20110101 / no], auto for no
 mintpy.network.excludeDate     = auto  #[20080520,20090817 / no], auto for no
-mintpy.network.excludeIfgIndex = auto  #[1:5,25 / no], auto for no, list of ifg index (start from 0)
+mintpy.network.excludeIfgIndex = [0,2,18]  #[1:5,25 / no], auto for no, list of ifg index (start from 0)
 mintpy.network.referenceFile   = auto  #[date12_list.txt / ifgramStack.h5 / no], auto for no
 
 ## 2) Data-driven network modification
@@ -79,7 +79,7 @@ mintpy.network.referenceFile   = auto  #[date12_list.txt / ifgramStack.h5 / no],
 ## It calculates a average coherence for each interferogram using spatial coherence based on input mask (with AOI)
 ## Then it finds a minimum spanning tree (MST) network with inverse of average coherence as weight (keepMinSpanTree)
 ## Next it excludes interferograms if a) the average coherence < minCoherence AND b) not in the MST network.
-mintpy.network.coherenceBased  = auto  #[yes / no], auto for no, exclude interferograms with coherence < minCoherence
+mintpy.network.coherenceBased  = yes  #[yes / no], auto for no, exclude interferograms with coherence < minCoherence
 mintpy.network.minCoherence    = 0.4  #[0.0-1.0], auto for 0.7
 
 ## b - Effective Coherence Ratio network modification = (threshold + MST) by default
